add css on header sectionn , scrollbar

--- a/index.html
+++ b/index.html
@@ -12,13 +12,15 @@
     
     <!-- header section start  -->
     <header class="header">
+       <section class="flex">
         <a href="#home" class="logo"><i class=" fas.fa-money-bill-trend-up" ></i>E-stock</a>
         <a href="#download" class="btn">Download app</a>
+       </section>
     </header>
 
     <!-- header section end -->
 
-
+ 
 
 
 
