--- a/index.html
+++ b/index.html
@@ -20,6 +20,19 @@
 
     <!-- header section end -->
 
+    <!-- navbar section start  -->
+    <div class="navbar">
+        <div class="nav">
+            <a href="#home"><i class="fas fa-home"></i><span>Home</span></a>
+            <a href="#about"><i class="fas fa-circle-info"></i><span>about</span></a>
+            <a href="#download"><i class="fas fa-download"></i><span>Download</span></a>
+            <a href="#pricing"><i class="fas fa-comments-dollar"></i><span>Pricing</span></a>
+            <a href="#home"><i class="fas fa-user"></i><span>Login</span></a>
+        </div>
+    </div>
+
+    <!-- navbar section end  -->
+
  
 
 
