navbar is ends and home section is start

--- a/index.html
+++ b/index.html
@@ -33,8 +33,19 @@
 
     <!-- navbar section end  -->
 
- 
+    
+    <!-- home section start  -->
+    <section id="home" class="home">
 
+        <div class="flex">
+
+            <div class="content">
+                <h3>Start trading journey with us </h3>
+            </div>
+        </div>
+    </section>
+
+    <!-- home section END  -->
 
 
 
