home section ended

--- a/index.html
+++ b/index.html
@@ -40,7 +40,12 @@
         <div class="flex">
 
             <div class="content">
-                <h3>Start trading journey with us </h3>
+                <h3>Start your trading journey with us 👍 </h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis, tempora! Mollitia eos magni et rerum aliquam earum est cum accusantium.</p>
+                <a href="#download" class="btn">Start trading</a>
+            </div>
+            <div class="image">
+                <img src="./image/home.png" alt="home image">
             </div>
         </div>
     </section>
