--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
     <!-- custom css link  -->
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     
@@ -52,7 +53,51 @@
 
     <!-- home section END  -->
 
+    <!-- services section started  -->
+    <section class="services">
 
+        <div class="box-container">
+
+            <div class="box">
+                <i class="fas fa-money-bill-trend-up"></i>
+                <h3>extra income</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus alias aliquam veritatis magni, numquam rerum?</p>
+            </div>
+
+            <div class="box">
+                <i class="fas fa-coins"></i>
+                <h3>finacial advisory</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus alias aliquam veritatis magni, numquam rerum?</p>
+            </div>
+
+            <div class="box">
+                <i class="fas fa-shield-halved"></i>
+                <h3>account protection</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus alias aliquam veritatis magni, numquam rerum?</p>
+            </div>
+
+            <div class="box">
+                <i class="fas fa-credit-card"></i>
+                <h3>easy payments</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus alias aliquam veritatis magni, numquam rerum?</p>
+            </div>
+
+            <div class="box">
+                <i class="fas fa-money-bill-trend-up"></i>
+                <h3>easy withdraw</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus alias aliquam veritatis magni, numquam rerum?</p>
+            </div>
+
+            <div class="box">
+                <i class="fas fa-headset"></i>
+                <h3>24/7 support</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus alias aliquam veritatis magni, numquam rerum?</p>
+            </div>
+        </div>
+    </section>
+
+
+    <!-- services section ended -->
 
 
 
