about section ended

--- a/index.html
+++ b/index.html
@@ -99,7 +99,24 @@
 
     <!-- services section ended -->
 
+    <!-- about section start  -->
+    <div class="about" id="#about">
 
+        <section class="flex">
+
+            <div class="content">
+                <h3>Benefits we offer 😊 </h3>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut, repellendus aperiam? Ipsam facere nobis commodi.</p>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut, repellendus aperiam? Ipsam facere nobis commodi.</p>
+                <a href="#" class="btn">learn trading</a>
+            </div>
+
+            <div class="image">
+                <img src="./image/img-2@2x-1.png" alt="stock image">
+            </div>
+        </section>
+    </div>
+    <!-- about section ended -->
 
 
 
