--- a/index.html
+++ b/index.html
@@ -118,6 +118,121 @@
     </div>
     <!-- about section ended -->
 
+    <!-- review section started  -->
+    <section class="reviews">
+
+        <div class="flex">
+
+            <div class="content">
+                <h3>What our clients says 😎</h3>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quis recusandae corrupti ab exercitationem excepturi. Odio?</p>
+                <div class="controls">
+                    <div class="fas fa-angle-left"></div>
+                    <div class="fas fa-angle-right"></div>
+                </div>
+            </div>
+        </div>
+
+        <div class="slide-container">
+
+            <div class="slide">
+                <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam et sed mollitia culpa molestiae laboriosam.</p>
+                <div class="user">
+                    <img src="./image/nemish shah.jpg" alt="">
+                    <div>
+                        <h3>Nemish shah</h3>
+                        <div class="stars">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star-helf-alt"></i>
+                        </div>
+                    </div>
+                    <i class="fas fa-quote-right"></i>
+                </div>
+
+            <div class="slide">
+                <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam et sed mollitia culpa molestiae laboriosam.</p>
+                <div class="user">
+                    <img src="./image/porinju veliyath.jpg" alt="">
+                    <div>
+                        <h3>porinju veliyath</h3>
+                        <div class="stars">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star-helf-alt"></i>
+                        </div>
+                    </div>
+                    <i class="fas fa-quote-right"></i>
+                </div>
+
+            <div class="slide">
+                <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam et sed mollitia culpa molestiae laboriosam.</p>
+                <div class="user">
+                    <img src="./image/rakesh jhunjhunwala.webp" alt="">
+                    <div>
+                        <h3>rakesh jhunjhunwala</h3>
+                        <div class="stars">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star-helf-alt"></i>
+                        </div>
+                    </div>
+                    <i class="fas fa-quote-right"></i>
+                </div>
+
+            <div class="slide">
+                <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam et sed mollitia culpa molestiae laboriosam.</p>
+                <div class="user">
+                    <img src="./image/vijay kedia.jpg" alt="">
+                    <div>
+                        <h3>vijay kedia</h3>
+                        <div class="stars">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star-helf-alt"></i>
+                        </div>
+                    </div>
+                    <i class="fas fa-quote-right"></i>
+                </div>
+
+            <div class="slide">
+                <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam et sed mollitia culpa molestiae laboriosam.</p>
+                <div class="user">
+                    <img src="./image/gautam adani.webp" alt="">
+                    <div>
+                        <h3>Gautam adani</h3>
+                        <div class="stars">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star-helf-alt"></i>
+                        </div>
+                    </div>
+                    <i class="fas fa-quote-right"></i>
+                </div>
+
+            </div>
+        </div>
+
+    </section>
+
+    <!-- review section ended  -->
+
+
+
+
+
+
+
 
 
 
