review section ended

--- a/index.html
+++ b/index.html
@@ -127,15 +127,15 @@
                 <h3>What our clients says 😎</h3>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quis recusandae corrupti ab exercitationem excepturi. Odio?</p>
                 <div class="controls">
-                    <div class="fas fa-angle-left"></div>
-                    <div class="fas fa-angle-right"></div>
+                    <div class="fas fa-angle-left" onclick="prev()"></div>
+                    <div class="fas fa-angle-right" onclick="next()"></div>
                 </div>
             </div>
-        </div>
+        
 
-        <div class="slide-container">
+            <div class="slide-container">
 
-            <div class="slide">
+            <div class="slide active">
                 <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam et sed mollitia culpa molestiae laboriosam.</p>
                 <div class="user">
                     <img src="./image/nemish shah.jpg" alt="">
@@ -151,6 +151,7 @@
                     </div>
                     <i class="fas fa-quote-right"></i>
                 </div>
+            </div>
 
             <div class="slide">
                 <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam et sed mollitia culpa molestiae laboriosam.</p>
@@ -168,6 +169,7 @@
                     </div>
                     <i class="fas fa-quote-right"></i>
                 </div>
+            </div>
 
             <div class="slide">
                 <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam et sed mollitia culpa molestiae laboriosam.</p>
@@ -185,6 +187,7 @@
                     </div>
                     <i class="fas fa-quote-right"></i>
                 </div>
+            </div>
 
             <div class="slide">
                 <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam et sed mollitia culpa molestiae laboriosam.</p>
@@ -202,6 +205,7 @@
                     </div>
                     <i class="fas fa-quote-right"></i>
                 </div>
+            </div>
 
             <div class="slide">
                 <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam et sed mollitia culpa molestiae laboriosam.</p>
@@ -221,8 +225,8 @@
                 </div>
 
             </div>
+            </div>
         </div>
-
     </section>
 
     <!-- review section ended  -->
@@ -237,6 +241,6 @@
 
 
     <!-- custom script file link  -->
- <script src="script.js"></script>    
+<script src="script.js"></script>    
 </body>
 </html>
