download section ended

--- a/index.html
+++ b/index.html
@@ -231,7 +231,32 @@
 
     <!-- review section ended  -->
 
+    <!-- download section start  -->
+    <div class="download" id="download">
 
+        <section class="flex">
+
+            <div class="images">
+                <img src="./image/img-3@2x-1.png" alt="">
+            </div>
+
+
+            <div class="content">
+                <h3>download and start trading !</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor, ipsum facilis. Voluptas reprehenderit aperiam consequuntur alias consectetur, blanditiis possimus voluptates.</p>
+                <div class="links">
+                    <a href="#"><i class="fab fa-google-play"> google play</i></a>
+                    <a href="#"><i class="fab fa-apple"> apple store</i></a>
+                </div>
+            </div>
+
+
+        </section>
+    </div>
+
+
+
+    <!-- download section ends -->
 
 
 
