adding price section below download section

--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
         <div class="flex">
 
             <div class="content">
-                <h3>Start your trading journey with us 👍 </h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis, tempora! Mollitia eos magni et rerum aliquam earum est cum accusantium.</p>
+                <h3>Start your trading journey with us👍</h3>
+                <p>₹145 crore brokerage saved in just 1 year across 8.5 lakh clients</p>
                 <a href="#download" class="btn">Start trading</a>
             </div>
             <div class="image">
@@ -61,37 +61,37 @@
             <div class="box">
                 <i class="fas fa-money-bill-trend-up"></i>
                 <h3>extra income</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus alias aliquam veritatis magni, numquam rerum?</p>
+                <p>Currency is one of the largest & highly liquid markets worldwide. That combined with a low margin requirement, makes it one of the best investments to include in your portfolio.</p>
             </div>
 
             <div class="box">
                 <i class="fas fa-coins"></i>
                 <h3>finacial advisory</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus alias aliquam veritatis magni, numquam rerum?</p>
+                <p>"Personalized financial advice to optimize wealth management, navigate markets, and achieve your financial objectives with confidence and clarity."</p>
             </div>
 
             <div class="box">
                 <i class="fas fa-shield-halved"></i>
                 <h3>account protection</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus alias aliquam veritatis magni, numquam rerum?</p>
+                <p>"Robust security measures safeguarding your account against unauthorized access and ensuring the protection of your financial assets."</p>
             </div>
 
             <div class="box">
                 <i class="fas fa-credit-card"></i>
                 <h3>easy payments</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus alias aliquam veritatis magni, numquam rerum?</p>
+                <p>"Seamless and hassle-free payment solutions for your convenience, making transactions effortless and efficient."</p>
             </div>
 
             <div class="box">
                 <i class="fas fa-money-bill-trend-up"></i>
                 <h3>easy withdraw</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus alias aliquam veritatis magni, numquam rerum?</p>
+                <p>"Effortless withdrawal process ensures quick access to funds, providing ease and flexibility in managing your financial transactions."                                                                                           </p>
             </div>
 
             <div class="box">
                 <i class="fas fa-headset"></i>
                 <h3>24/7 support</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus alias aliquam veritatis magni, numquam rerum?</p>
+                <p>"Round-the-clock assistance ensures reliable support anytime, offering peace of mind and guidance whenever you need it most."</p>
             </div>
         </div>
     </section>
@@ -136,7 +136,8 @@
             <div class="slide-container">
 
             <div class="slide active">
-                <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam et sed mollitia culpa molestiae laboriosam.</p>
+                <p class="text">"Nemish Shah's stock market wisdom: blend astute analysis with calculated risk, navigating the market's ebbs and flows."
+                </p>
                 <div class="user">
                     <img src="./image/nemish shah.jpg" alt="">
                     <div>
@@ -154,7 +155,7 @@
             </div>
 
             <div class="slide">
-                <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam et sed mollitia culpa molestiae laboriosam.</p>
+                <p class="text">"In the stock market maze, wisdom, patience, and knowledge guide decisions toward artful investment."</p>
                 <div class="user">
                     <img src="./image/porinju veliyath.jpg" alt="">
                     <div>
@@ -172,7 +173,8 @@
             </div>
 
             <div class="slide">
-                <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam et sed mollitia culpa molestiae laboriosam.</p>
+                <p class="text">
+                    "In the realm of stocks, Rakesh Jhunjhunwala crafts wealth through insight, courage, and strategic vision."</p>
                 <div class="user">
                     <img src="./image/rakesh jhunjhunwala.webp" alt="">
                     <div>
@@ -190,7 +192,8 @@
             </div>
 
             <div class="slide">
-                <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam et sed mollitia culpa molestiae laboriosam.</p>
+                <p class="text">
+                    "In the dynamic market dance, Vijay Kedia orchestrates success with foresight, resilience, and an unwavering belief in fundamentals."</p>
                 <div class="user">
                     <img src="./image/vijay kedia.jpg" alt="">
                     <div>
@@ -208,7 +211,8 @@
             </div>
 
             <div class="slide">
-                <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam et sed mollitia culpa molestiae laboriosam.</p>
+                <p class="text">
+                    "Gautam Adani's journey through the market is a testament to determination, innovation, and bold vision."</p>
                 <div class="user">
                     <img src="./image/gautam adani.webp" alt="">
                     <div>
@@ -259,9 +263,66 @@
     <!-- download section ends -->
 
 
+    <!-- pricing section start  -->
 
 
 
+    <!-- pricing section ends -->
+
+    <section class="pricing" id="pricing">
+
+        <div class="toggle-buttons">
+            <div class="button month-btn active">monthly</div>
+            <div class="button year-btn">yearly</div>
+        </div>
+
+        <div class="box-container">
+            <div class="box">
+                <h3>Basic</h3>
+                <div class="price month"><span>$9.99 / </span><span>monthly</span></div>
+                <div class="price year"><span>$99.99 / </span><span>yearly</span></div>
+
+                <div class="list">
+                    <p><i class="fas fa-circle-check"></i><span>trade learning access</span></p>
+                    <p><i class="fas fa-circle-check"></i><span>graphical chart reports</span></p>
+                    <p><i class="fas fa-circle-check"></i><span>account management</span></p>
+                    <p><i class="fas fa-circle-xmark"></i><span>personal advisors</span></p>
+                    <p><i class="fas fa-circle-xmark"></i><span>24/7 technical support</span></p>
+                </div>
+                <a href="#" class="btn">choose plan</a>
+            </div>
+
+            <div class="box">
+                <h3>standard</h3>
+                <div class="price month"><span>$29.99 / </span><span>monthly</span></div>
+                <div class="price year"><span>$199.99 / </span><span>yearly</span></div>
+
+                <div class="list">
+                    <p><i class="fas fa-circle-check"></i><span>graphical chart reports</span></p>
+                    <p><i class="fas fa-circle-check"></i><span>trade learning access</span></p>
+                    <p><i class="fas fa-circle-check"></i><span>account management</span></p>
+                    <p><i class="fas fa-circle-check"></i><span>personal advisors</span></p>
+                    <p><i class="fas fa-circle-xmark"></i><span>24/7 technical support</span></p>
+                </div>
+                <a href="#" class="btn">choose plan</a>
+            </div>
+
+            <div class="box">
+                <h3>premium</h3>
+                <div class="price month"><span>$49.99 / </span><span>monthly</span></div>
+                <div class="price year"><span>$299.99 / </span><span>yearly</span></div>
+
+                <div class="list">
+                    <p><i class="fas fa-circle-check"></i><span>trade learning access</span></p>
+                    <p><i class="fas fa-circle-check"></i><span>graphical chart reports</span></p>
+                    <p><i class="fas fa-circle-check"></i><span>account management</span></p>
+                    <p><i class="fas fa-circle-check"></i><span>personal advisors</span></p>
+                    <p><i class="fas fa-circle-check"></i><span>24/7 technical support</span></p>
+                </div>
+                <a href="#" class="btn">choose plan</a>
+            </div>
+        </div>
+    </section>
 
 
 
