newsletter section ended

--- a/index.html
+++ b/index.html
@@ -267,8 +267,7 @@
 
 
 
-    <!-- pricing section ends -->
-
+    
     <section class="pricing" id="pricing">
 
         <div class="toggle-buttons">
@@ -323,10 +322,41 @@
             </div>
         </div>
     </section>
+    
+    <!-- pricing section ends -->
+
+
+
+
+    <!-- newsletter section start  -->
+
+    <div class="newsletter">
+        <div class="news">
+            <h3>get latest news</h3>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sed expedita sint dicta ad sequi fuga totam corporis? Suscipit alias dolore quibusdam impedit nam, a repellendus ab ratione! Tempora, expedita neque.</p>
+            <form action="">
+                <input type="text" placeholder="your name"  class="input" maxlength="50">
+                <input type="email" placeholder="your email"  class="input" maxlength="50">
+                <input type="submit" placeholder="your email" value="subscribe" class="btn">
+            </form>
+        </div>
+    </div>
+
+
+    <!-- newsletter section ends   -->
+
+
+
+
+
+
+
+
+
 
 
 
     <!-- custom script file link  -->
-<script src="script.js"></script>    
+    <script src="script.js"></script>    
 </body>
 </html>
