adding footer section

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
     <!-- services section ended -->
 
     <!-- about section start  -->
-    <div class="about" id="#about">
+    <div class="about" id="about">
 
         <section class="flex">
 
@@ -344,8 +344,56 @@
 
 
     <!-- newsletter section ends   -->
+    
+    <!-- brand section start  -->
 
 
+    <!-- brand section ends -->
+
+
+    <!-- footer section start -->
+
+    <footer class="footer">
+
+        <section class="box-container">
+
+            <div class="box">
+                <h3>quick links</h3>
+                <a href="#home"><i class="fas fa-angle-right"></i> home</a>
+                <a href="#about"><i class="fas fa-angle-right"></i> about </a>
+                <a href="#download"><i class="fas fa-angle-right"></i> download</a>
+                <a href="#pricing"><i class="fas fa-angle-right"></i> pricing</a>
+            </div>
+
+
+            <div class="box">
+                <h3>Useful links</h3>
+                <a href="#"><i class="fas fa-angle-right"></i> FAQ</a>
+                <a href="#"><i class="fas fa-angle-right"></i> login /register</a>
+                <a href="#"><i class="fas fa-angle-right"></i> privacy policy</a>
+                <a href="#"><i class="fas fa-angle-right"></i> terms and conditons</a>
+            </div>
+
+            <div class="box">
+                <h3>Contact us</h3>
+                <a href="tel: 7447525103"><i class="fas fa-phone"></i> +91 7447525103</a>
+                <a href="tel: 7447525103"><i class="fas fa-phone"></i> +91 7447525103</a>
+                <a href="tel: 7447525103"><i class="fas fa-envelope"></i> dipaksk11@gmail.com</a>
+                <a href="tel: 7447525103"><i class="fas fa-envelope"></i> dipaksk11@gmail.com</a>
+            </div>
+            <div class="box">
+                <h3>Follow us</h3>
+                <a href="#"><i class="fa-brands fa-youtube"></i> youtube</a>
+                <a href="#"><i class="fa-brands fa-instagram"></i> instagram</a>
+                <a href="#"><i class="fa-brands fa-whatsapp"></i> whatsapp</a>
+                <a href="#"><i class="fa-brands fa-github"></i> github</a>
+            </div>
+
+        </section>
+        <div class="credit">Created by <span>mr. Dipak Kumawat</span> | all rights reserved</div>
+
+    </footer>
+    <!-- footer section ends -->
 
 
 
