--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- header section start  -->
     <header class="header">
        <section class="flex">
-        <a href="#home" class="logo"><i class=" fas.fa-money-bill-trend-up" ></i>E-stock</a>
+        <a href="#home" class="logo"><i class="fa-solid fa-money-bill-trend-up"></i>E-stock</a>
         <a href="#download" class="btn">Download app</a>
        </section>
     </header>
@@ -24,7 +24,7 @@
     <!-- navbar section start  -->
     <div class="navbar">
         <div class="nav">
-            <a href="#home"><i class="fas fa-home"></i><span>Home</span></a>
+            <a href="#home"><i class="fa-solid fa-home"></i><span>Home</span></a>
             <a href="#about"><i class="fas fa-circle-info"></i><span>about</span></a>
             <a href="#download"><i class="fas fa-download"></i><span>Download</span></a>
             <a href="#pricing"><i class="fas fa-comments-dollar"></i><span>Pricing</span></a>
@@ -106,8 +106,8 @@
 
             <div class="content">
                 <h3>Benefits we offer 😊 </h3>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut, repellendus aperiam? Ipsam facere nobis commodi.</p>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut, repellendus aperiam? Ipsam facere nobis commodi.</p>
+                <p>We provide personalized financial advice tailored to your needs, empowering you to make informed decisions and achieve your goals.</p>
+                <p>Our easy-to-use platform offers seamless transactions and 24/7 support, ensuring a smooth and convenient experience for our users.</p>
                 <a href="#" class="btn">learn trading</a>
             </div>
 
@@ -125,7 +125,7 @@
 
             <div class="content">
                 <h3>What our clients says 😎</h3>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quis recusandae corrupti ab exercitationem excepturi. Odio?</p>
+                <p>Our clients praise our attentive support team for their quick response and expert guidance, ensuring satisfaction and trust in our services</p>
                 <div class="controls">
                     <div class="fas fa-angle-left" onclick="prev()"></div>
                     <div class="fas fa-angle-right" onclick="next()"></div>
@@ -247,7 +247,7 @@
 
             <div class="content">
                 <h3>download and start trading !</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor, ipsum facilis. Voluptas reprehenderit aperiam consequuntur alias consectetur, blanditiis possimus voluptates.</p>
+                <p>ownload our app from Google Play or the Apple Store for a chance to win exciting prizes! Start your journey to financial success today.</p>
                 <div class="links">
                     <a href="#"><i class="fab fa-google-play"> google play</i></a>
                     <a href="#"><i class="fab fa-apple"> apple store</i></a>
@@ -333,7 +333,7 @@
     <div class="newsletter">
         <div class="news">
             <h3>get latest news</h3>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sed expedita sint dicta ad sequi fuga totam corporis? Suscipit alias dolore quibusdam impedit nam, a repellendus ab ratione! Tempora, expedita neque.</p>
+            <p>"Stay informed with our latest news section, providing updates on market trends, economic insights, and investment opportunities in real-time."</p>
             <form action="">
                 <input type="text" placeholder="your name"  class="input" maxlength="50">
                 <input type="email" placeholder="your email"  class="input" maxlength="50">
